--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -2,3 +2,12 @@
 addons_path = /mnt/addons,/usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 admin_passwd = admin
 db_name = mydb
+limit_time_cpu = 60000000
+limit_time_real = 120000000
+limit_time_real_cron = 1800
+max_cron_threads = 2
+;log-level = debug_sql
+timezone = Europe/Kiev
+limit_memory_soft = 1629145600
+limit_memory_hard = 4677721600
+limit_request = 8192
